--- a/docker/Dockerfile_apisix
+++ b/docker/Dockerfile_apisix
@@ -5,7 +5,7 @@ RUN apt-get update &&\
   apt-get -y install nginx &&\
   sed -i 's@#!\/usr\/bin\/env bash@&\nsed -i "s/{MAX_SIZE}/\$MAX_SIZE/" /etc/nginx/conf.d/default.conf\nsed -i "s/{API_KEY}/\$API_KEY/" /etc/nginx/conf.d/default.conf\nsed -i "s/{LICENSE_PLATE}/\$LICENSE_PLATE/" /etc/nginx/conf.d/default.conf\nsed -i "s/{TARGET_ENV}/\$TARGET_ENV/" /etc/nginx/conf.d/default.conf\nnginx\&@' /docker-entrypoint.sh &&\
   mkdir -p /var/cache/nginx && mkdir -p /var/log/nginx && mkdir -p /etc/nginx
-RUN chmod 766 /var/cache/nginx && chmod 777 /var/run && && chmod 766 /var/log/nginx && chmod 766 /etc/nginx
+RUN chmod 766 /var/cache/nginx && chmod 777 /var/run && chmod 766 /var/log/nginx && chmod 766 /etc/nginx
 COPY docker/apisix-paths.yaml /usr/local/apisix/conf/apisix.yaml
 COPY docker/apisix-config.yaml /usr/local/apisix/conf/config.yaml
 COPY docker/default.conf /etc/nginx/conf.d/default.conf
