--- a/docker/Dockerfile_liquibase
+++ b/docker/Dockerfile_liquibase
@@ -6,5 +6,8 @@ EXPOSE 8080
 USER root
 RUN apt-get update &&\
   apt-get install -y nginx &&\
-  echo '#!/bin/bash\nnginx\nliquibase update --changelogFile=main-changelog.json --defaultsFile=/liquibase/liquibase.properties --log-file=/liquibase/liquibase.log --url=$DB_URL --username=$DB_USER --password=$DB_PASS\ntail -f /liquibase/liquibase.log' > /liquibase/docker-entrypoint.sh
+  echo '#!/bin/bash\nnginx\nliquibase update --changelogFile=main-changelog.json --defaultsFile=/liquibase/liquibase.properties --log-file=/liquibase/liquibase.log --url=$DB_URL --username=$DB_USER --password=$DB_PASS\ntail -f /liquibase/liquibase.log' > /liquibase/docker-entrypoint.sh &&\
+  mkdir -p /var/cache/nginx && mkdir -p /etc/nginx
+RUN chmod 766 /var/cache/nginx && chmod 777 /var/run && chmod 766 /var/log && chmod -R 766 /etc/nginx && chmod 766 -R /liquibase
 COPY docker/default_liquibase.conf /etc/nginx/conf.d/default.conf
+VOLUME /var/cache/nginx /var/run /var/log/nginx /etc/nginx /var/lib/nginx /liquibase
