--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -37,18 +37,21 @@
     "@busacca/ng-pick-datetime": "10.0.0",
     "@capacitor-community/fcm": "^5.0.1",
     "@capacitor/android": "^5.0.3",
-    "@capacitor/app": "^5.0.2",
+    "@capacitor/app": "5.0.3",
     "@capacitor/app-launcher": "^5.0.2",
     "@capacitor/browser": "^5.0.2",
     "@capacitor/camera": "^5.0.2",
-    "@capacitor/core": "^5.0.4",
+    "@capacitor/core": "5.0.5",
     "@capacitor/device": "^5.0.2",
     "@capacitor/dialog": "^5.0.2",
     "@capacitor/geolocation": "^5.0.2",
-    "@capacitor/ios": "^5.0.3",
+    "@capacitor/haptics": "5.0.4",
+    "@capacitor/ios": "5.0.5",
+    "@capacitor/keyboard": "5.0.4",
     "@capacitor/network": "^5.0.2",
     "@capacitor/push-notifications": "^5.0.2",
     "@capacitor/splash-screen": "^5.0.2",
+    "@capacitor/status-bar": "5.0.4",
     "@ckeditor/ckeditor5-angular": "4.0.0",
     "@ckeditor/ckeditor5-build-decoupled-document": "35.0.1",
     "@ngrx/effects": "15.4.0",
@@ -89,12 +92,12 @@
     "ngx-moment": "3.1.0",
     "ngx-pagination": "5.1.1",
     "ngx-treeview": "6.0.2",
-    "sass": "^1.43.4",
     "popper.js": "1.14.4",
     "puppeteer": "15.4.0",
     "qrcode": "1.5.1",
     "rxjs": "6.6.7",
     "rxjs-tslint": "0.1.8",
+    "sass": "^1.43.4",
     "tslib": "2.0.0",
     "vanilla-text-mask": "5.1.1",
     "video.js": "7.15.4",
@@ -111,6 +114,7 @@
     "@angular/cli": "15.2.8",
     "@angular/compiler-cli": "15.2.9",
     "@angular/language-service": "15.2.9",
+    "@capacitor/cli": "5.0.5",
     "@ngrx/schematics": "15.4.0",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.2",
