--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -101,7 +101,7 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
-      - name: build archive
+      - name: Build archive
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
         run: |
           xcodebuild -scheme "App" \
@@ -112,7 +112,7 @@ jobs:
           -destination generic/platform=iOS \
           clean archive
 
-      - name: export ipa
+      - name: Export archive
         env:
           EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
         run: |
@@ -135,15 +135,15 @@ jobs:
       #     api-key-id: ${{ secrets.APP_STORE_CONNECT_KEY_IDENTIFIER_95 }}
       #     api-private-key: ${{ secrets.APP_STORE_CONNECT_PRIVATE_KEY_95 }}
 
-      # - name: Post to a Slack channel
-      #   id: slack
-      #   if: always()
-      #   uses: slackapi/slack-github-action@v1.24.0
-      #   with:
-      #     # Slack channel id, channel name, or user id to post message.
-      #     # See also: https://api.slack.com/methods/chat.postMessage#channels
-      #     # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
-      #     channel-id: 'wildfire-build-notifier'
-      #     slack-message: "iOS build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-      #   env:
-      #     SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+      - name: Post to a Slack channel
+        id: slack
+        if: always()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          # Slack channel id, channel name, or user id to post message.
+          # See also: https://api.slack.com/methods/chat.postMessage#channels
+          # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
+          channel-id: 'wildfire-build-notifier'
+          slack-message: "iOS build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
