Add Android back with correct settings

--- a/client/wfnews-war/src/main/angular/package.json
+++ b/client/wfnews-war/src/main/angular/package.json
@@ -36,7 +36,7 @@
     "@angular/youtube-player": "^15.2.9",
     "@busacca/ng-pick-datetime": "10.0.0",
     "@capacitor-community/fcm": "^5.0.1",
-    "@capacitor/android": "^5.0.3",
+    "@capacitor/android": "5.0.5",
     "@capacitor/app": "5.0.3",
     "@capacitor/app-launcher": "^5.0.2",
     "@capacitor/browser": "^5.0.2",
@@ -67,7 +67,6 @@
     "@wf1/orgunit-rest-api": "^2.0.2",
     "@wf1/wfcc-application-ui": "^1.2.0-SNAPSHOT",
     "@wf1/wfdm-document-management-api": "^1.2.0-SNAPSHOT",
-    "android-post-notification-permission": "^0.0.7",
     "angular-oauth2-oidc": "4.0.2",
     "angular2-uuid": "1.1.1",
     "assert": "2.0.0",
