--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -112,7 +112,7 @@ jobs:
           -destination generic/platform=iOS \
           clean archive
 
-      - name: Export archive
+      - name: Export IPA
         env:
           EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
         run: |
@@ -120,7 +120,7 @@ jobs:
           echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o $EXPORT_OPTS_PATH
           xcodebuild -exportArchive -archivePath $RUNNER_TEMP/App.xcarchive -exportOptionsPlist $EXPORT_OPTS_PATH -exportPath $RUNNER_TEMP/build
 
-      - name: Upload application
+      - name: Upload IPA
         uses: actions/upload-artifact@v3
         with:
           name: app
