--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -83,34 +83,48 @@ jobs:
       - uses: sparkfabrik/android-build-action@v1.4.0
         name: Build AAB and upload to Play Store
         with:
-          build-type: "bundle"
-          gradle-task: "bundleRelease"
           increment-build-number: false
+          project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
+          output-path: wfnews-release-${{ github.sha }}.apk
+        # Use this to move to aab files. Requires proper signing
+          # build-type: "bundle"
+          # gradle-task: "bundleRelease"
+          # increment-build-number: false
           # package-name: ${{ env.PACKAGE_NAME }}
           # keystore-content: ${{ secrets.KEYSTORE_CONTENT }}
           # keystore-password: ${{ secrets.KEYSTORE_PASSWORD }}
           # key-alias: ${{ secrets.KEY_ALIAS }}
           # json-key-data: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
           # upload-to-play-store: true
-          project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
-          output-path: wfnews-release-${{ github.sha }}.aab
+          # project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
+          # output-path: wfnews-release-${{ github.sha }}.aab
+
   
       - uses: actions/upload-artifact@v3
-        name: Upload AAB to GitHub
+        name: Upload APK to GitHub
         with:
-          name: wfnews-release-${{ github.sha }}.aab
-          path: '${{ env.ANGULAR_DIRECTORY }}/android/wfnews-release-${{ github.sha }}.aab'
+          name: wfnews-release-${{ github.sha }}.apk
+          path: '${{ env.ANGULAR_DIRECTORY }}/android/wfnews-release-${{ github.sha }}.apk'
           retention-days: 3
+
+      - name: Set short git commit SHA
+        id: vars
+        if: always()
+        run: |
+          calculatedSha=$(git rev-parse --short ${{ github.sha }})
+          echo "::set-output name=short_sha::$calculatedSha"
 
       - name: Post to a Slack channel
         id: slack
         if: always()
         uses: slackapi/slack-github-action@v1.24.0
+        env:
+          STATUS_EMOJI: ${{ job.status == 'success' && ':white_check_mark:' || ':x:' }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         with:
           # Slack channel id, channel name, or user id to post message.
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: 'wildfire-build-notifier'
-          slack-message: "Android build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          slack-message: "Android - ${{ steps.vars.outputs.short_sha }} : ${{ job.status }} ${{ env.STATUS_EMOJI }}"
+          
