--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -134,16 +134,24 @@ jobs:
       #     issuer-id: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
       #     api-key-id: ${{ secrets.APP_STORE_CONNECT_KEY_IDENTIFIER_95 }}
       #     api-private-key: ${{ secrets.APP_STORE_CONNECT_PRIVATE_KEY_95 }}
+      - name: Set short git commit SHA
+        id: vars
+        if: always()
+        run: |
+          calculatedSha=$(git rev-parse --short ${{ github.sha }})
+          echo "::set-output name=short_sha::$calculatedSha"
 
       - name: Post to a Slack channel
         id: slack
         if: always()
         uses: slackapi/slack-github-action@v1.24.0
+        env:
+          STATUS_EMOJI: ${{ job.status == 'success' && ':white_check_mark:' || ':x:' }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         with:
           # Slack channel id, channel name, or user id to post message.
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: 'wildfire-build-notifier'
-          slack-message: "iOS build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          slack-message: "iOS - ${{ steps.vars.outputs.short_sha }} : ${{ job.status }} ${{ env.STATUS_EMOJI }}"
+        
