--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -153,5 +153,5 @@ jobs:
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: 'wildfire-build-notifier'
-          slack-message: "iOS - ${{ steps.vars.outputs.short_sha }} : ${{ job.status }} ${{ env.STATUS_EMOJI }}"
+          slack-message: ":apple_mac: iOS - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}"
         
