--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,13 +1,31 @@
 name: Build Android
 
-env:
-  WEBADE_JCRS_URL: ${{ secrets.WEBADE_JCRS_URL }}
-  NPMRC: ${{ secrets.NPMRC }}
-  PACKAGE_NAME: ${{ secrets.KEY_ALIAS }}
-
-
 # Controls when the workflow will run
-on: workflow_call
+on: 
+  workflow_call:
+    inputs:
+      build_environment:
+        description: 'Build Environment'
+        type: string
+        required: true
+      upload_to_play_store:
+        description: 'Upload to Play Store'
+        type: boolean
+        required: true
+  workflow_dispatch:
+    inputs:
+      build_environment:
+        description: 'Build Environment'
+        type: choice
+        options:
+          - development
+          - production
+        default: 'development'
+      upload_to_play_store:
+        description: 'Upload to Play Store'
+        type: boolean
+        default: false
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,41 +36,29 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
+      - name: Set short git commit SHA
+        id: vars
+        if: always()
+        run: |
+          calculatedSha=$(git rev-parse --short ${{ github.sha }})
+          echo "::set-output name=short_sha::$calculatedSha"
       
       - name: Add .npmrc file
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
+        env: 
+          NPMRC: ${{ secrets.NPMRC }}
         run: echo -e "$NPMRC" > .npmrc
           
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          # cache: 'npm'
-          # cache-dependency-path: ${{ env.ANGULAR_DIRECTORY }}/package-lock.json
 
-      # - name: Cache node modules
-      #   id: cache-npm
-      #   uses: actions/cache@v3
-      #   env:
-      #     cache-name: cache-node-modules
-      #   with:
-      #     # npm cache files are stored in `~/.npm` on Linux/macOS
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-build-${{ env.cache-name }}-
-      #       ${{ runner.os }}-build-
-      #       ${{ runner.os }}-
-
-      # - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-      #   name: List the state of node modules
-      #   continue-on-error: true
-      #   run: npm list
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
       - name: Install Ionic
         run: npm install -g @ionic/cli
@@ -63,56 +69,48 @@ jobs:
 
       - name: Prepare app for build
         working-directory: ${{ env.ANGULAR_DIRECTORY }}
-        run: ionic capacitor sync android --prod
-
-      # ## cache to reduce future builds
-      # - name: Cache Gradle
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: | 
-      #       ~/.gradle/caches
-      #       ~/.gradle/wrapper
-      #     key: ${{ runner.os }}-gradle-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-gradle-
+        env:
+          BUILD_FLAG: ${{ inputs.build_environment == 'production' && '--prod' || '' }}
+        run: ionic capacitor sync android $BUILD_FLAG
 
       - name: Make gradlew executable
         working-directory: ${{ env.ANGULAR_DIRECTORY }}/android
         run: chmod +x ./gradlew
 
       - uses: sparkfabrik/android-build-action@v1.4.0
-        name: Build AAB and upload to Play Store
+        if: ${{ inputs.upload_to_play_store == 'false' }}
+        name: Build APK
         with:
           increment-build-number: false
           project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
-          output-path: wfnews-release-${{ github.sha }}.apk
-        # Use this to move to aab files. Requires proper signing
-          # build-type: "bundle"
-          # gradle-task: "bundleRelease"
-          # increment-build-number: false
-          # package-name: ${{ env.PACKAGE_NAME }}
-          # keystore-content: ${{ secrets.KEYSTORE_CONTENT }}
-          # keystore-password: ${{ secrets.KEYSTORE_PASSWORD }}
-          # key-alias: ${{ secrets.KEY_ALIAS }}
-          # json-key-data: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
-          # upload-to-play-store: true
-          # project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
-          # output-path: wfnews-release-${{ github.sha }}.aab
+          output-path: wfnews-release-${{ steps.vars.outputs.short_sha }}.apk
 
-  
-      - uses: actions/upload-artifact@v3
-        name: Upload APK to GitHub
+      - uses: sparkfabrik/android-build-action@v1.4.0
+        if: ${{ inputs.upload_to_play_store == 'true' }}
+        name: Build AAB and upload to Play Store
+        env:
+          PACKAGE_NAME: ${{ secrets.KEY_ALIAS }}
         with:
-          name: wfnews-release-${{ github.sha }}.apk
-          path: '${{ env.ANGULAR_DIRECTORY }}/android/wfnews-release-${{ github.sha }}.apk'
-          retention-days: 3
+          build-type: "bundle"
+          gradle-task: "bundleRelease"
+          increment-build-number: false
+          package-name: ${{ env.PACKAGE_NAME }}
+          keystore-content: ${{ secrets.KEYSTORE_CONTENT }}
+          keystore-password: ${{ secrets.KEYSTORE_PASSWORD }}
+          keystore-alias: ${{ secrets.KEY_ALIAS }}
+          json-key-data: ${{ secrets.GOOGLE_PLAY_JSON_KEY }}
+          upload-to-play-store: true
+          project-path: '${{ env.ANGULAR_DIRECTORY }}/android/'
+          output-path: wfnews-release-${{ steps.vars.outputs.short_sha }}.aab
 
-      - name: Set short git commit SHA
-        id: vars
-        if: always()
-        run: |
-          calculatedSha=$(git rev-parse --short ${{ github.sha }})
-          echo "::set-output name=short_sha::$calculatedSha"
+      - uses: actions/upload-artifact@v3
+        env: 
+          FILE_EXTENSION: ${{ inputs.upload_to_play_store == 'false' && 'apk' || 'aab' }}
+        name: Upload Build Artifact to GitHub
+        with:
+          name: wfnews-release-${{ steps.vars.outputs.short_sha }}.${{ env.FILE_EXTENSION }}
+          path: '${{ env.ANGULAR_DIRECTORY }}/android/wfnews-release-${{ steps.vars.outputs.short_sha }}.${{ env.FILE_EXTENSION }}'
+          retention-days: 3
 
       - name: Post to a Slack channel
         id: slack
