--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,7 +25,9 @@ on:
         description: 'Upload to Play Store'
         type: boolean
         default: false
-
+  push:
+    branches:
+      - 'mobile-build-automation'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
