--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,7 +1,7 @@
 name: Build iOS
 
 # Controls when the workflow will run
-on: 
+on:
   workflow_call:
     inputs:
       build_environment:
@@ -25,6 +25,9 @@ on:
         description: 'Upload to App Store'
         type: boolean
         default: false
+  push:
+    branches:
+      - 'mobile-build-automation'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
