--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -127,5 +127,5 @@ jobs:
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: 'wildfire-build-notifier'
-          slack-message: ":android: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}"
+          slack-message: ":android: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}  \n Environment: ${{ github.event.inputs.build_environment }} \n Upload to Play Store: ${{ github.event.inputs.upload_to_play_store }}"
           
