--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -163,5 +163,5 @@ jobs:
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: 'wildfire-build-notifier'
-          slack-message: ":apple_mac: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }}"
+          slack-message: ":apple_mac: - ${{ steps.vars.outputs.short_sha }} : ${{ env.STATUS_EMOJI }} ${{ job.status }} \n Environment: ${{ github.event.inputs.build_environment }} \n Upload to App Store: ${{ github.event.inputs.upload_to_app_store }}"
         
