--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
  <properties>
   <sonar.organization>bcgov-sonarcloud</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-  <sonar.sources>database,terraform</sonar.sources>
+  <sonar.sources>database,docker,terraform</sonar.sources>
 </properties>
   
   <modules>
