Update for firebase ids/secrets

--- a/server/wfone-notification-push-api/wfone-notification-push-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfone-notification-push-api/wfone-notification-push-api-rest-endpoints/src/main/resources/application.properties
@@ -15,3 +15,7 @@ wfone.aws.secret.key=#{wfone.aws.secret.key}
 push.notification.event.consumer.interval.seconds=#{push.notification.event.consumer.interval.seconds}
 push.notification.prefix=#{push.notification.prefix}
 firebase.db.url=#{firebase.db.url}
+private_key_id=#{private_key_id}
+client_id=#{client_id}
+client_x509_cert_url=#{client_x509_cert_url}
+
