--- a/server/wfone-notification-push-api/wfone-notification-push-api-rest-endpoints/src/main/resources/firebase-config.json
+++ b/server/wfone-notification-push-api/wfone-notification-push-api-rest-endpoints/src/main/resources/firebase-config.json
@@ -4,9 +4,9 @@
   "private_key_id": "${private_key_id}",
   "private_key": "${private_key}",
   "client_email": "firebase-adminsdk-p54oc@wildlife-push-test.iam.gserviceaccount.com",
-  "client_id": "108489319246214492710",
+  "client_id": "${client_id}",
   "auth_uri": "https://accounts.google.com/o/oauth2/auth",
   "token_uri": "https://oauth2.googleapis.com/token",
   "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-  "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-p54oc%40wildlife-push-test.iam.gserviceaccount.com"
+  "client_x509_cert_url": "${client_x509_cert_url}"
 }
