--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -120,6 +120,17 @@ jobs:
       GITHUB_RELEASE_NAME: ${{ github.event.release.name }}
       DB_SIZE: 20
       MAX_UPLOAD_SIZE: 100M
+      VISIBILITY_TIMEOUT_SECONDS: 100
+      ACCEPTED_IPS: ""
+      PUSH_NOTIFICATION_AWS_USER: ""
+      EVENT_BRIDGE_ARN: ""
+      WFNEWS_URL: ""
+      SECRET_NAME: ""
+      BAN_PROHIBITION_MONITOR_KEY: ""
+      ACTIVE_FIRE_MONITOR_KEY: ""
+      AREA_RESTRICTIONS_MONITOR_KEY: ""
+      EVACUATION_MONITOR_KEY: ""
+      LAMBDA_LAYER_KEY: ""
 
     secrets:
       CLOUDFRONT_HEADER: ${{ secrets.CLOUDFRONT_HEADER_PROD }}
