--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -115,6 +115,17 @@ jobs:
       AGOL_BANS_AND_PROHIBITIONS: https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/test_British_Columbia_Bans_and_Prohibition_Areas/FeatureServer/0/
       GITHUB_RELEASE_NAME: ${{ github.event.release.name }}
       DB_SIZE: 12
+      VISIBILITY_TIMEOUT_SECONDS: 100
+      ACCEPTED_IPS: ""
+      PUSH_NOTIFICATION_AWS_USER: ""
+      EVENT_BRIDGE_ARN: ""
+      WFNEWS_URL: ""
+      SECRET_NAME: ""
+      BAN_PROHIBITION_MONITOR_KEY: ""
+      ACTIVE_FIRE_MONITOR_KEY: ""
+      AREA_RESTRICTIONS_MONITOR_KEY: ""
+      EVACUATION_MONITOR_KEY: ""
+      LAMBDA_LAYER_KEY: ""
 
     secrets:
       CLOUDFRONT_HEADER: ${{ secrets.CLOUDFRONT_HEADER_TEST }}
