--- a/.github/workflows/sonarscan.yml
+++ b/.github/workflows/sonarscan.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           java-version: 17
           distribution: 'zulu' # Alternative distribution options are available.
+      - name: Add .npmrc file
+        run: echo -e $NPMRC > ~/.npmrc
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
