--- a/.github/workflows/deploy-test-patch.yml
+++ b/.github/workflows/deploy-test-patch.yml
@@ -59,9 +59,9 @@ jobs:
         id: get-release-tag
       
 
-  terragrunt-deploy-test:
+  wfnews-terragrunt-deploy-test:
     needs: tag-images
-    uses: ./.github/workflows/terragrunt-deploy.yml
+    uses: ./.github/workflows/wfnews-terragrunt-deploy.yml
     with:
       REGISTRY: ghcr.io
       #Server and Image name get PR number as appropriate inside deploy step
