--- a/.github/workflows/mvn-server-patch.yml
+++ b/.github/workflows/mvn-server-patch.yml
@@ -1,12 +1,9 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build Server
 
 env:
-  IMAGE_NAME: ${{ github.repository }}-server
+  IMAGE_NAME: "${{ github.repository }}-${{inputs.PROJECT_NAME}}"
 
-# Controls when the workflow will run
-on:
+on: 
   workflow_call:
     inputs:
       REGISTRY:
@@ -18,20 +15,19 @@ on:
       TAG:
         required: true
         type: string
+      PROJECT_NAME:
+        type: string
+        description: 'Name of project, as given to the subfolder of /server to build'
+        required: true
     secrets:
       IDIR_AS_EMAIL:
         required: true
       IDIR_PASSWORD:
         required: true
-      
 
-
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
         with:
@@ -44,24 +40,24 @@ jobs:
           distribution: 'adopt'
       
       - name: Build with Maven
-        run: mvn --settings server/wfnews-api/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/wfnews-api/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
+        run: mvn --settings server/${{ inputs.PROJECT_NAME }}/mvn_settings/settings.xml --batch-mode --update-snapshots -f server/${{ inputs.PROJECT_NAME }}/pom.xml -Drepo.login=${{ secrets.IDIR_AS_EMAIL }} -Drepo.password=${{ secrets.IDIR_PASSWORD }} -DskipTests package
         
       - name: Copy files to neccessary folders
-        run: mkdir staging && cp server/wfnews-api/wfnews-api-rest-endpoints/target/*.war staging
+        run: mkdir staging && cp server/${{ inputs.PROJECT_NAME }}/${{ inputs.PROJECT_NAME }}-rest-endpoints/target/*.war staging
       
       - uses: actions/upload-artifact@v3
         with:
-         name: Package
+         name: ${{ inputs.PROJECT_NAME }}-package
          path: staging
          
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
           path: staging
-          key: ${{ runner.os }}-maven-${{ hashFiles('**war.xml') }}
+          key: ${{ inputs.PROJECT_NAME }}-maven-${{ hashFiles('**war.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
-         
+            ${{ inputs.PROJECT_NAME }}-maven-
+
   docker:
     needs: build
     runs-on: ubuntu-latest
@@ -70,13 +66,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.BRANCH }}
+
       - name: download artifact
         uses: actions/download-artifact@v3
         with:
-          name: Package
+          name: ${{ inputs.PROJECT_NAME }}-package
           path: .
           
       - name: Update image name if PR number present
+        if: ${{ github.event.pull_request.number > 0 }}
         run: echo "IMAGE_NAME = ${{env.IMAGE_NAME}}-hotfix" >> $GITHUB_ENV
       
       - name: Set up QEMU
@@ -110,4 +108,3 @@ jobs:
           push: true
           tags: ${{ steps.meta_pr.outputs.tags }}
           labels: ${{ steps.meta_pr.outputs.labels }}
-     
