--- a/.github/workflows/wfone-notifications-api-terragrunt-deploy.yml
+++ b/.github/workflows/wfone-notifications-api-terragrunt-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy using terragrunt
+name: Deploy WFONE Notifications API using terragrunt
 
 on:
   workflow_call:
@@ -66,79 +66,46 @@ on:
       WFDM_REST_URL:
         required: true
         type: string
-      WFIM_CLIENT_URL:
-        required: true
-        type: string
       WFIM_CODE_TABLES_URL:
         required: true
         type: string
-      WEBADE-OAUTH2_CHECK_TOKEN_URL:
+      WEBADE_OAUTH2_CHECK_TOKEN_URL:
         required: true
         type: string
-      WFNEWS_EMAIL_NOTIFICATIONS_ENABLED:
+      WEBADE_OAUTH2_TOKEN_CLIENT_URL:
+        required: true
+        type: string
+      EMAIL_NOTIFICATIONS_ENABLED:
         required: true
         type: string
       SMTP_HOST_NAME:
         required: true
         type: string
-      SMTP_FROM_EMAIL:
+      SMTP_CREDENTIALS_USER:
         required: true
         type: string
-      SMTP_ADMIN_EMAIL:
+      SMTP_FROM_ADDRESS:
+        required: true
+        type: string
+      SMTP_ADMIN_ADDRESS:
         required: true
         type: string
       SMTP_EMAIL_SYNC_ERROR_FREQ:
         required: true
         type: string
-      SMTP_EMAIL_FREQ:
+      SMTP_EMAIL_SYNC_SEND_FREQ:
         required: true
         type: string
-      SMTP_EMAIL_ERROR_SUBJECT:
+      SMTP_EMAIL_SYNC_ERROR_SUBJECT:
         required: true
         type: string
-      SMTP_EMAIL_SUBJECT:
+      SMTP_EMAIL_SYNC_SUBJECT:
         required: true
         type: string
       DEFAULT_APPLICATION_ENVIRONMENT:
         required: true
         type: string
-      WFNEWS_AGOL_QUERY_URL:
-        required: true
-        type: string
-      WFNEWS_USERNAME:
-        required: true
-        type: string
-      WFNEWS_MAX_CONNECTIONS:
-        required: true
-        type: number
-      WEBADE_OAUTH2_REST_CLIENT_ID:
-        required: true
-        type: string
-      WEBADE_OAUTH2_UI_CLIENT_ID:
-        required: true
-        type: string
-      WEBADE_OAUTH2_AUTHORIZE_URL:
-        required: true
-        type: string
       IMAGE_TAG:
-        required: true
-        type: string
-      AGOL_URL:
-        required: true
-        type: string
-      DRIVEBC_BASE_URL:
-        required: true
-        type: string
-      OPENMAPS_BASE_URL:
-        required: true
-        type: string
-      SITEMINDER_URL_PREFIX:
-        required: true
-        type: string
-      AGOL_AREA_RESTRICTIONS:
-        required: true
-        type: string
-      AGOL_BANS_AND_PROHIBITIONS:
         required: true
         type: string
       GITHUB_RELEASE_NAME:
@@ -153,64 +120,9 @@ on:
         required: false
         type: string
         default: "100M"
-      MAX_RECEIVED_COUNT:
-        required: false
-        type: number
-        default: 10
-      VISIBILITY_TIMEOUT_SECONDS:
-        required: false
-        type: number
-        default: 10
-      ACCEPTED_IPS:
-        required: false
-        type: string
-        default: ""
-      PUSH_NOTIFICATION_AWS_USER:
-        required: false
-        type: string
-        default: ""
-      EVENT_BRIDGE_ARN:
-        required: false
-        type: string
-        default: ""
-      WFNEWS_URL:
-        required: false
-        type: string
-        default: ""
-      SECRET_NAME:
-        required: false
-        type: string
-        default: ""
-      BAN_PROHIBITION_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      ACTIVE_FIRE_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      AREA_RESTRICTIONS_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      EVACUATION_MONITOR_KEY:
-        required: false
-        type: string
-        default: ""
-      LAMBDA_LAYER_KEY:
-        required: false
-        type: string
-        default: ""
-      FUNCTION_BUCKET:
-        required: false
-        type: string
-        default: ""
+        
 
     secrets:
-      # AWS_ACCESS_KEY_ID:
-      #   required: true
-      # AWS_SECRET_ACCESS_KEY:
-      #   required: true
       LICENSE_PLATE:
         required: true
       DB_PASS:
@@ -285,50 +197,27 @@ jobs:
           ALB_NAME: ${{ inputs.ALB_NAME }}
           VPC_NAME: ${{ inputs.VPC_NAME }}
           SUBNET_FILTER: ${{ inputs.SUBNET_FILTER }}
-          WEBADE_OAUTH2_REST_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_REST_CLIENT_ID}}
-          WEBADE_OAUTH2_UI_CLIENT_ID: ${{inputs.WEBADE_OAUTH2_UI_CLIENT_ID}}
-          WEBADE-OAUTH2_TOKEN_CLIENT_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_CLIENT_URL}}
-          WEBADE-OAUTH2_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_URL}}
-          WEBADE_OAUTH2_AUTHORIZE_URL: ${{inputs.WEBADE_OAUTH2_AUTHORIZE_URL}}
-          WFDM_REST_URL: ${{inputs.WFDM_REST_URL}}
-          WFIM_CLIENT_URL: ${{inputs.WFIM_CLIENT_URL}}
-          WFIM_CODE_TABLES_URL: ${{inputs.WFIM_CODE_TABLES_URL}}
-          WEBADE-OAUTH2_CHECK_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_CHECK_TOKEN_URL}}
-          WFNEWS_EMAIL_NOTIFICATIONS_ENABLED: ${{inputs.WFNEWS_EMAIL_NOTIFICATIONS_ENABLED}}
-          SMTP_HOST_NAME: ${{inputs.SMTP_HOST_NAME}}
-          SMTP_FROM_EMAIL: ${{inputs.SMTP_FROM_EMAIL}}
-          SMTP_ADMIN_EMAIL: ${{inputs.SMTP_ADMIN_EMAIL}}
-          SMTP_EMAIL_SYNC_ERROR_FREQ: ${{inputs.SMTP_EMAIL_SYNC_ERROR_FREQ}}
-          SMTP_EMAIL_FREQ: ${{inputs.SMTP_EMAIL_FREQ}}
-          SMTP_EMAIL_ERROR_SUBJECT: ${{inputs.SMTP_EMAIL_ERROR_SUBJECT}}
-          SMTP_EMAIL_SUBJECT: ${{inputs.SMTP_EMAIL_SUBJECT}}
-          DEFAULT_APPLICATION_ENVIRONMENT: ${{inputs.DEFAULT_APPLICATION_ENVIRONMENT}}
-          WFNEWS_AGOL_QUERY_URL: ${{inputs.WFNEWS_AGOL_QUERY_URL}}
-          SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
-          WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_REST_CLIENT_SECRET}}
-          WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFNEWS_UI_CLIENT_SECRET}}
-          WFNEWS_USERNAME: ${{inputs.WFNEWS_USERNAME}}
-          WFNEWS_MAX_CONNECTIONS: ${{inputs.WFNEWS_MAX_CONNECTIONS}}
-          SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS }}
-          agolUrl: ${{inputs.AGOL_URL}}
-          drivebcBaseUrl: ${{inputs.DRIVEBC_BASE_URL}}
-          openmapsBaseUrl: ${{inputs.OPENMAPS_BASE_URL}}
-          siteMinderURLPrefix: ${{inputs.SITEMINDER_URL_PREFIX}}
-          agolAreaRestrictions: ${{inputs.AGOL_AREA_RESTRICTIONS}}
-          agolBansAndProhibitions: ${{inputs.AGOL_BANS_AND_PROHIBITIONS}}
-          MAX_RECEIVED_COUNT: ${{inputs.MAX_RECEIVED_COUNT }}
-          VISIBILITY_TIMEOUT_SECONDS: ${{inputs.VISIBILITY_TIMEOUT_SECONDS }}
-          ACCEPTED_IPS: ${{inputs.ACCEPTED_IPS }}
-          PUSH_NOTIFICATION_AWS_USER: ${{inputs.PUSH_NOTIFICATION_AWS_USER }}
-          EVENT_BRIDGE_ARN: ${{inputs.EVENT_BRIDGE_ARN }}
-          WFNEWS_URL: ${{inputs.WFNEWS_URL }}
-          SECRET_NAME: ${{inputs.SECRET_NAME }}
-          BAN_PROHIBITION_MONITOR_KEY: ${{inputs.BAN_PROHIBITION_MONITOR_KEY }}
-          ACTIVE_FIRE_MONITOR_KEY: ${{inputs.ACTIVE_FIRE_MONITOR_KEY }}
-          AREA_RESTRICTIONS_MONITOR_KEY: ${{inputs.AREA_RESTRICTIONS_MONITOR_KEY }}
-          EVACUATION_MONITOR_KEY: ${{inputs.EVACUATION_MONITOR_KEY }}
-          LAMBDA_LAYER_KEY: ${{inputs.LAMBDA_LAYER_KEY }}
-          FUNCTION_BUCKET: ${{inputs.FUNCTION_BUCKET}}
 
+          DEFAULT_APPLICATION_ENVIRONMENT: ${{inputs.DEFAULT_APPLICATION_ENVIRONMENT}}
+          EMAIL_NOTIFICATIONS_ENABLED: ${{inputs.EMAIL_NOTIFICATIONS_ENABLED}}
+          SMTP_ADMIN_ADDRESS: ${{inputs.SMTP_ADMIN_ADDRESS}}
+          SMTP_EMAIL_SYNC_ERROR_SUBJECT: ${{inputs.SMTP_EMAIL_SYNC_ERROR_SUBJECT}}
+          SMTP_EMAIL_SYNC_SEND_FREQ: ${{inputs.SMTP_EMAIL_SYNC_SEND_FREQ}}
+          SMTP_EMAIL_SYNC_SUBJECT: ${{inputs.SMTP_EMAIL_SYNC_SUBJECT}}
+          SMTP_EMAIL_SYNC_ERROR_FREQ: ${{inputs.SMTP_EMAIL_SYNC_ERROR_FREQ}}
+          SMTP_FROM_ADDRESS: ${{inputs.SMTP_FROM_ADDRESS}}
+          SMTP_HOST_NAME: ${{inputs.SMTP_HOST_NAME}}
+          SMTP_CREDENTIALS_USER: ${{inputs.SMTP_CREDENTIALS_USER}}
+          SMTP_CREDENTIALS_PASSWORD: ${{secrets.SMTP_PASSWORD}}
+          SNS_EMAIL_TARGETS: ${{ secrets.SNS_EMAIL_TARGETS }}
+          
+          WEBADE_OAUTH2_CHECK_TOKEN_URL: ${{inputs.WEBADE_OAUTH2_CHECK_TOKEN_URL}}
+          WEBADE_OAUTH2_TOKEN_CLIENT_URL: ${{inputs.WEBADE_OAUTH2_TOKEN_CLIENT_URL}}
+          WEBADE_OAUTH2_TOKEN_URL: ${{inputs.WEBADE-OAUTH2_TOKEN_URL}}
+          WEBADE_OAUTH2_WFONE_NOTIFICATIONS_API_REST_CLIENT_SECRET: ${{secrets.WEBADE_OAUTH2_WFONE_NOTIFICATIONS_REST_CLIENT_SECRET}}
+
+          WFDM_REST_URL: ${{inputs.WFDM_REST_URL}}
+          WFIM_CODE_TABLES_URL: ${{inputs.WFIM_CODE_TABLES_URL}}
+          
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
 
