--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,14 @@
     <module>server/wfss-pointid-api</module>
   </modules>
 
+  <dependencyManagement>
+		<dependencies>
+  		<dependency>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.9.1.2184</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 </project>
