--- a/.github/workflows/lambda-zip.yml
+++ b/.github/workflows/lambda-zip.yml
@@ -32,9 +32,9 @@ jobs:
 
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r evacuation-orders-monitor.zip /lambda/evacuation-orders-monitor
+          args: zip -qq -r evacuation-orders-monitor.zip lambda/evacuation-orders-monitor
         
-      - name: Get source code hash of jar files
+      - name: Get source code hash of Zip files
         run: |
           openssl sha256 active-fire-monitor.zip > active-fire-monitor-hash.txt
           openssl sha256 area-restrictions-monitor.zip > area-restrictions-monitor-hash.txt
