--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -6,6 +6,9 @@ env:
   NPMRC: ${{ secrets.NPMRC }}
   TRIGGERS: ('client/' 'server/' '.github/workflows')
 on:
+  push:
+    branches:
+      - 'mobile-build-automation'
   pull_request_target:
     types:
       - closed
